Improved the scrollbar in help and fixed the titlebar btns

--- a/Style/help.css
+++ b/Style/help.css
@@ -17,7 +17,7 @@ body::-webkit-scrollbar {
 body::-webkit-scrollbar-thumb {
     border-radius: 100rem;
     background-color: lime;
-    border:2px solid green;
+    border:2px solid seagreen;
 }
 
 .header {
